Add request DTOs for role, assignment, user, and patient management